[project]
name = "omnisage-backend"
version = "0.1.0"
description = "OmniSage Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "cryptography>=41.0.0",
    "docx2txt>=0.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-deepseek>=0.1.4",
    "langchain-ollama>=0.3.6",
    "langchain-text-splitters>=0.3.9",
    "ollama>=0.5.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "pypdf>=5.9.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sentence-transformers>=2.2.2",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
