[project]
name = "omnisage-frontend"
version = "0.1.0"
description = "OmniSage Frontend - Gradio frontend for AI knowledge management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio==5.41.1",
    "requests==2.32.4",
    "vosk==0.3.44"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]



 
